--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>DarxLegends</title>
+<title>DarxLegends Website</title>
 <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/kathool/darxlegends/main/favicon.png"/>
 </head>
 <body>
