--- a/index.html
+++ b/index.html
@@ -72,7 +72,47 @@
     <section class="u-align-center u-clearfix u-image u-shading u-section-1" src="" data-image-width="1920" data-image-height="1080" id="sec-4409">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-custom-font u-text u-text-1" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">DarxLegends</h2>
-        <a href="#" class="u-active-grey-5 u-border-2 u-border-grey-75 u-btn u-btn-round u-button-style u-hover-grey-10 u-radius-14 u-white u-btn-1">Copy IP</a>
+        <a href="#" class="u-active-grey-5 u-border-2 u-border-grey-75 u-btn u-btn-round u-button-style u-hover-grey-10 u-radius-14 u-white u-btn-1"><button id="copyButton">Copy IP</button></a>
+	      <script>
+	      function copyText(text){
+	        function selectElementText(element) {
+	          if (document.selection) {
+	            var range = document.body.createTextRange();
+	            range.moveToElementText(element);
+	            range.select();
+	          } else if (window.getSelection) {
+	            var range = document.createRange();
+	            range.selectNode(element);
+	            window.getSelection().removeAllRanges();
+	            window.getSelection().addRange(range);
+	          }
+	        }
+	        var element = document.createElement('DIV');
+	        element.textContent = text;
+	        document.body.appendChild(element);
+	        selectElementText(element);
+	        document.execCommand('copy');
+	        element.remove();
+	      }
+	      
+	      var btn = document.getElementById('copyButton');
+	      btn.addEventListener('click', function(){
+	        copyText("play.darxlegends.tk");
+	        btn.innerHTML = "Copied!";
+	      })
+
+
+	      document.getElementById("copyButton").onmouseover = function() {mouseOver()};
+	      document.getElementById("copyButton").onmouseout = function() {mouseOut()};
+
+	      function mouseOver() {
+	          document.getElementById("copyButton").innerHTML = "Copy IP";
+	      }
+
+	      function mouseOut() {
+	          document.getElementById("copyButton").innerHTML = "play.darxlegends.tk";
+	      }
+</script>
         <a href="https://darxlegends.tebex.io/" class="u-active-grey-5 u-border-2 u-border-grey-75 u-btn u-btn-round u-button-style u-hover-grey-10 u-radius-14 u-white u-btn-2" target="_blank">STORE</a>
       </div>
     </section>
