--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <section class="u-align-center u-clearfix u-image u-shading u-section-1" src="" data-image-width="1920" data-image-height="1080" id="sec-4409">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-custom-font u-text u-text-1" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">DarxLegends</h2>
-        <a href="#" class="u-active-grey-5 u-border-2 u-border-grey-75 u-btn u-btn-round u-button-style u-hover-grey-10 u-radius-14 u-white u-btn-1"><button id="copyButton">Copy IP</button></a>
+        <p href="#" class="u-active-grey-5 u-border-2 u-border-grey-75 u-btn u-btn-round u-button-style u-hover-grey-10 u-radius-14 u-white u-btn-1"><button id="copyButton">Copy IP</button></p>
 	      <script>
 	      function copyText(text){
 	        function selectElementText(element) {
@@ -110,9 +110,30 @@
 	      }
 
 	      function mouseOut() {
-	          document.getElementById("copyButton").innerHTML = "play.darxlegends.tk";
+	          document.getElementById("copyButton").innerHTML = "Copy IP";
 	      }
 	      </script>
+	      <style>
+	      #copyButton {
+	          border: none;
+	          color: white;
+	          background-color: #0095ff;
+	          padding: 16px 16px;
+	          text-align: center;
+	          font-size: 16px;
+	          margin: 4px 2px;
+	          -webkit-transition-duration: 0.4s; /* Safari */
+	          transition-duration: 0.4s;
+	          cursor: pointer;
+	          border-radius: 4px;
+	          width: 95%;
+	      }
+
+	      #copyButton:hover {
+	          background-color: #757575;
+	          color: white;
+	      }
+	      </style>
         <a href="https://darxlegends.tebex.io/" class="u-active-grey-5 u-border-2 u-border-grey-75 u-btn u-btn-round u-button-style u-hover-grey-10 u-radius-14 u-white u-btn-2" target="_blank">STORE</a>
       </div>
     </section>
