--- a/index.html
+++ b/index.html
@@ -115,23 +115,11 @@
 	      </script>
 	      <style>
 	      #copyButton {
-	          border: none;
-	          color: white;
-	          background-color: #0095ff;
-	          padding: 16px 16px;
-	          text-align: center;
-	          font-size: 16px;
-	          margin: 4px 2px;
-	          -webkit-transition-duration: 0.4s; /* Safari */
-	          transition-duration: 0.4s;
-	          cursor: pointer;
-	          border-radius: 4px;
-	          width: 95%;
+		  opacity: 0.5;
 	      }
 
 	      #copyButton:hover {
-	          background-color: #757575;
-	          color: white;
+	          opacity: 0;
 	      }
 	      </style>
         <a href="https://darxlegends.tebex.io/" class="u-active-grey-5 u-border-2 u-border-grey-75 u-btn u-btn-round u-button-style u-hover-grey-10 u-radius-14 u-white u-btn-2" target="_blank">STORE</a>
