--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 	      </script>
 	      <style>
 	      #copyButton {
-		  opacity: 0.5;
+		  opacity: 0;
 	      }
 
 	      #copyButton:hover {
@@ -214,7 +214,7 @@
           </a>
           <a class="u-social-url" target="_blank" href="https://www.instagram.com/darxlegends"><span class="u-icon u-icon-circle u-social-instagram u-social-type-logoColor u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-479f"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 112 112" x="0px" y="0px" id="svg-479f" style="color: rgb(197, 54, 164);"><path fill="currentColor" d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z M55.9,69.4c-7.4,0-13.3-6-13.3-13.3c-0.1-7.4,6-13.3,13.3-13.3s13.3,6,13.3,13.3C69.3,63.5,63.3,69.4,55.9,69.4z"></path><path fill="currentColor" d="M79.7,26.8c-3,0-5.4,2.5-5.4,5.4s2.5,5.4,5.4,5.4c3,0,5.4-2.5,5.4-5.4S82.7,26.8,79.7,26.8z"></path><path fill="currentColor" d="M78.2,11H33.5C21,11,10.8,21.3,10.8,33.7v44.7c0,12.6,10.2,22.8,22.7,22.8h44.7c12.6,0,22.7-10.2,22.7-22.7 V33.7C100.8,21.1,90.6,11,78.2,11z M91,78.4c0,7.1-5.8,12.8-12.8,12.8H33.5c-7.1,0-12.8-5.8-12.8-12.8V33.7 c0-7.1,5.8-12.8,12.8-12.8h44.7c7.1,0,12.8,5.8,12.8,12.8V78.4z"></path></svg></span>
           </a>
-          <a class="u-social-url" target="_blank" href="https://discord.gg/uGxxTZEhXV"><span class="u-icon u-icon-circle u-social-tumblr u-social-type-logoColor u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-4156"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 112 112" x="0px" y="0px" id="svg-4156" style="color: rgb(57, 89, 118);"><path fill="currentColor" d="M79.9,100c-4.9,1.6-9.8,2.5-14.9,2.6c-3.9,0-7.8-0.4-11.4-1.4c-8.9-2.2-14-8-15.1-17.8v-1.3 c0-0.5,0-12.1-0.1-34.2h-9.2V32.2c1.8,0.1,3.6,0,5.4-0.9c6.3-2.7,10.1-7.8,11.4-15c0-0.4,0.1-0.8,0.3-1.2c0-0.9,0.1-1.7,0.4-2.5 h12.6v19.6h20.1v15.7H59.3v24.6c0,2.3,0.3,4.8,0.6,7.1c0.1,0.5,0.5,1.2,0.9,1.6c3.1,2.9,6.9,3.8,11.3,2.5c2.3-0.8,4.9-1.4,7.8-2.3 V100z"></path></svg></span>
+          <a class="u-social-url" target="_blank" href="https://discord.gg/uGxxTZEhXV"><span class="w3-center w3-padding-xlarge w3-black w3-xlarge w3-wide w3-animate-opacity"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-4156"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 112 112" x="0px" y="0px" id="svg-4156" style="color: rgb(57, 89, 118);"><path fill="currentColor" d="M79.9,100c-4.9,1.6-9.8,2.5-14.9,2.6c-3.9,0-7.8-0.4-11.4-1.4c-8.9-2.2-14-8-15.1-17.8v-1.3 c0-0.5,0-12.1-0.1-34.2h-9.2V32.2c1.8,0.1,3.6,0,5.4-0.9c6.3-2.7,10.1-7.8,11.4-15c0-0.4,0.1-0.8,0.3-1.2c0-0.9,0.1-1.7,0.4-2.5 h12.6v19.6h20.1v15.7H59.3v24.6c0,2.3,0.3,4.8,0.6,7.1c0.1,0.5,0.5,1.2,0.9,1.6c3.1,2.9,6.9,3.8,11.3,2.5c2.3-0.8,4.9-1.4,7.8-2.3 V100z"></path></svg></span>
           </a>
         </div>
       </div></footer>
