--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             
           </span>
               <h3 class="u-text u-text-body-alt-color u-text-1" data-animation-name="fadeIn" data-animation-duration="4000" data-animation-delay="0" data-animation-direction="">Community</h3>
-              <p class="u-text u-text-body-alt-color u-text-2">Join the community and be a part of the DarxLegends Community, almost anybody will feel right at home with us.</p>
+              <p class="u-text u-text-body-alt-color u-text-2">Join and be a part of the DarxLegends Community, almost anybody will feel right at home with us.</p>
             </div>
           </div>
           <div class="u-align-left u-container-style u-gradient u-list-item u-repeater-item u-list-item-2">
