--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     
     
     <footer class="u-align-left u-clearfix u-footer u-grey-80 u-footer" id="sec-0427"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        Develope
+        Developed by KathoolXYZ - Come join our <a href="https://discord.gg/uGxxTZEhXV">Discord</a>!
         </div>
       </div>
     </footer>
