--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     
     
     <footer class="u-align-left u-clearfix u-footer u-grey-80 u-footer" id="sec-0427"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        Developed by KathoolXYZ - Come join our <a href="https://discord.gg/uGxxTZEhXV">Discord</a>!
+        <p>Developed by KathoolXYZ - Come join our <a title="Discord Invite to DarxLegends" href="https://discord.gg/uGxxTZEhXV" target="_blank" rel="noopener">Discord</a>!</p>
         </div>
       </div>
     </footer>
